Fix GitHub Pages deployment workflow to use correct path and CNAME

--- a/.github/workflows/static-blog.yml
+++ b/.github/workflows/static-blog.yml
@@ -26,15 +26,26 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
-        
-      - name: Add CNAME
+      
+      - name: Create docs directory and copy Blog content
         run: |
-          echo "rohanpawar.me" > Blog/CNAME
+          # Create docs directory if it doesn't exist
+          mkdir -p docs
+          
+          # Copy all content from Blog to docs
+          cp -r Blog/* docs/ || echo "No files in Blog directory"
+          
+          # Create CNAME file in docs directory
+          echo "rohanpawar.me" > docs/CNAME
+          
+          # List contents to verify
+          echo "Contents of docs directory:"
+          ls -la docs/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './Blog'
+          path: './docs'
 
       - name: Deploy to GitHub Pages
         id: deployment
