--- a/.github/workflows/static-blog.yml
+++ b/.github/workflows/static-blog.yml
@@ -15,29 +15,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Set up and configure GitHub Pages
-  setup_pages:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Configure GitHub Pages
-        uses: actions/configure-pages@v4
-        with:
-          # Force the configuration to use the root directory (/)
-          path: "/"
-          
-      - name: Set CNAME directly through GitHub API
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          gh api --method PUT /repos/${{ github.repository }}/pages --field cname="rohanpawar.me"
-          echo "CNAME updated through GitHub API"
-
-  # Build and deploy content to GitHub Pages
   deploy:
-    needs: setup_pages
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -46,18 +24,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Prepare content for obsidian subdirectory
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Prepare content for deployment
         run: |
-          # Create a temporary directory for the final structure
+          # Create a temporary directory structure
           mkdir -p _site/obsidian
           
-          # Copy all content from Blog to obsidian subdirectory
+          # Copy Blog content to the obsidian subdirectory
           cp -r Blog/* _site/obsidian/ || echo "No files in Blog directory"
           
-          # Create CNAME file at the root level
+          # Create CNAME file (this will be used when you configure custom domain in GitHub Pages settings)
           echo "rohanpawar.me" > _site/CNAME
           
-          # Create a basic index.html at the root to redirect to the obsidian subdirectory
+          # Create a root index.html that redirects to /obsidian/
           cat > _site/index.html << 'EOL'
           <!DOCTYPE html>
           <html>
@@ -71,10 +52,13 @@ jobs:
           </html>
           EOL
           
-          # List contents to verify
-          echo "Contents of the _site directory:"
+          # Create an empty .nojekyll file to disable Jekyll processing
+          touch _site/.nojekyll
+          
+          # Verify the directory structure
+          echo "Contents of _site directory:"
           ls -la _site/
-          echo "Contents of the obsidian subdirectory:"
+          echo "Contents of _site/obsidian directory:"
           ls -la _site/obsidian/
 
       - name: Upload artifact
